<resources>
    <string name="app_name">Module 4 Solution</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favourite_restaurants">Favourite Restaurants</string>
    <string name="faqs">FAQs</string>
    <string name="log_out">Log out</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="favourite_fragment">Favourite Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="faqs_fragment">FAQs Fragment</string>
</resources>